# ctypes

./: .gitignore  CMakeLists.txt  COPYRIGHT  meson.build
NewDataType/: vector.c
include/ctypes/: helpers.h  list.h  radix.h  sequential.h  stack.h  tree.h  vector.h
include/ctypes/os/: exec.h  file.h
src/: BFmatch.c  btree.c  buffer.c  buffer.h  cirqueue.c  cirqueue.h  dhash.c  exec.c  hash.h  helpers.h  list.c  list.h  lstack.c  lstack.h  magic.c  queue.c  queue.h  sequential.h  stack.c  stack.h  strops.h  tree.h  vector.c  vector.h  vtree.c
src/deprecated/: linkerror.h  lqueue.c  lqueue.h  slink-addi.h  slinks.c  slinks.h
src/os/: buffer.c  buffer.h  exec.c  exec.h  file.c  file.h  os-compatibility.c  socket.c
src/radix/: radix.c
test/: CMakeLists.txt  meson.build  test_hash.c  test_list.c  test_smallfuncs.c  test_vector.c  test_vtree.c
tree/: bin_srch_tr.c  bintree.c  bintree.h  printree.h  rb_tree.c  rb_tree.c~  rb_tree.h  rb_tree.h~  rb_tree.idea  rb_tree_extern.c  testrb.c  threadtr.c  traversal.c
