test_smallfuncs = executable('ctypes_smallfuncs',
			     ['test_smallfuncs.c'],
			     dependencies: dep_ctypes)
test('test_ctypes_smallfuncs', test_smallfuncs)

test_vtree = executable('ctypes_vtree',
			['test_vtree.c'],
			dependencies: dep_ctypes)
test('test_ctypes_vtree', test_vtree)

test_vector = executable('ctypes_vector',
			 ['test_vector.c'],
			 dependencies: dep_ctypes)
test('test_ctypes_vector', test_vector)

test_hash = executable('ctypes_hash',
		       ['test_hash.c'],
		       dependencies: dep_ctypes)
test('test_ctypes_hash', test_hash)

test_list = executable('ctypes_list',
			 ['test_list.c'],
			 dependencies: dep_ctypes)
test('test_ctypes_list', test_list)
